# xai-gcalendar

./: README.md  check_event.xircuits  create_event.xircuits  gcalendar_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: check_event.xircuits  create_event.xircuits
