[project]
name = "xai-gcalendar"
version = "0.1.0"
description = "Xircuits component library for Google Calendar!"
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-gcalendar"
keywords = ["xircuits", "slack"]

dependencies = [
    "google-api-python-client==2.161.0"
]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/check_Gcalendar.xircuits"
requirements_path = "requirements.txt"